# CheatSheet

./: .eslintrc.json  .gitignore  .lintstagedrc.js  CHANGELOG  LICENSE  README.md  biome.json  next.config.js  package.json  pnpm-lock.yaml  rome.json  tailwind.config.ts  tsconfig.json
.github/workflows/: package.yml
docs/: shortcut.md
public/fonts/iconfont/: iconfont.css  iconfont.js  iconfont.json
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/docs/: shortcut.md
src-tauri/icons/: icon.icns
src-tauri/resources/: appCompat.json  appMap.json
src-tauri/resources/shortcuts/: Windows.json  shortcut.schema.json  shortcut.template.json  test.json
src-tauri/shortcuts/: CheatSheet.json  Default.json  Google Chrome.json  IntelliJ IDEA.json  Mac.json  Microsoft Edge.json  Microsoft Excel.json  Microsoft PowerPoint.json  Microsoft Visual Studio.json  Microsoft Word.json  Navicat Premium.json  PhpStorm.json  Postman.json  PyCharm.json  Sublime Text.json  Sublime.json  Typora.json  Visual Studio Code.json  Visual Studio.json  WebStorm.json  Windows.json  test.json
src-tauri/shortcuts/template/: shortcut.schema.json  shortcut.template.json
src-tauri/src/: active_window.rs  config.rs  event.rs  hotkey.rs  main.rs  tray.rs  updater.rs  utils.rs  window.rs
src/app/: layout.tsx  page.tsx
src/app/config/: layout.tsx  page.tsx
src/app/config/[slug]/: page.tsx
src/app/config/about/: page.tsx
src/app/config/general/: page.tsx
src/app/config/hotkey/: page.tsx
src/app/config/supportApp/: page.tsx
src/app/update/: layout.tsx  page.tsx
src/components/Config/: ConfigAside.tsx  Header.tsx  routes.tsx
src/components/Config/common/: Category.tsx  Checkbox.tsx  Container.tsx  Header.tsx  Keyboard.tsx  Range.tsx  Select.tsx  utils.tsx
src/components/Config/routes/: About.tsx  General.tsx  Hotkey.tsx  SupportApp.tsx
src/components/Config/routes/About/: About.tsx  about.json
src/components/ShortCut/: Category.tsx  ShortCut.tsx  ShortCutItem.tsx
src/components/Update/: Header.tsx  Update.tsx
src/components/common/: DragRegion.tsx  ShortCutCommand.tsx  WindowBar.tsx  WindowBarButton.tsx
src/lib/hooks/: useTheme.ts
src/lib/store/: index.ts  window.ts
src/lib/styles/: globals.css
src/lib/types/: config.ts  index.ts  os.ts  shortcut.ts
src/lib/utils/: index.ts  listen.ts  os.ts  shortcut.ts  shortcut.tsx  store.ts  toast.ts  updater.ts  util.ts  window.ts
updater/: updater.mjs
