[package]
name = "cheat_sheet"
version = "0.0.3"
description = "A Tauri App"
authors = ["JinSo, NoahCode"]
license = "MIT"
repository = "https://github.com/JinSooo/CheatSheet"
default-run = "cheat_sheet"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.1", features = [ "window-unmaximize", "window-maximize", "window-close", "window-start-dragging", "window-minimize", "window-set-focus", "clipboard-write-text", "process-relaunch", "dialog-all", "updater", "shell-open", "path-all", "fs-write-file", "fs-read-dir", "window-center", "window-set-size", "notification-all", "system-tray", "os-all", "fs-read-file", "macos-private-api", "window-show", "window-hide", "app-show", "app-hide", "global-shortcut-all"] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
active-win-pos-rs = "0.8.2"
once_cell = "1.18.0"
dirs = "5.0.1"
log = "0.4.20"
mouse_position = "0.1.3"
window-shadows = "0.2.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
